# agent-container

./: .gitignore  LICENSE  README.md  SPEC.md  agent  justfile  pyproject.toml
agent-image/: flake.nix  image.nix
agent-image/root/etc/: gitconfig  gitignore  nsswitch.conf
tests/: test_setup_tui.py
